(hopefully) fixed weird svg behaviour on IE

--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@ body {
 }
 
 #IEWarning {
+  overflow: visible;
   color: #FF0000;
 
   font-family: 'Roboto', sans-serif;
